Fix spacing in session popup. Fix the edit url on the proposal page video

--- a/funnel/static/css/app.css
+++ b/funnel/static/css/app.css
@@ -105,13 +105,14 @@
 .badge {
   position: relative;
   color: #fff;
-  width: 15px;
+  min-width: 15px;
   line-height: 15px;
-  height: 15px;
+  min-height: 15px;
   text-align: center;
   display: inline-block;
   background-color: #856a91;
-  border-radius: 50%;
+  border-radius: 3px;
+  padding: 2px;
 }
 
 .select2-inline {
@@ -141,7 +142,7 @@
 }
 
 .collapsible__header--smaller {
-  width: calc(100% - 51px);
+  width: calc(100% - 37px);
   padding: 10px;
   margin: 0 0 10px;
   white-space: nowrap;
@@ -1578,7 +1579,7 @@ html.touch .collapsible__body--disable {
   width: calc(100% / 7);
   text-align: center;
   margin: 0;
-  padding: 10px 0;
+  padding: 10px 0 15px;
   background: #f9fafc;
 }
 .card__calendar
@@ -1681,7 +1682,7 @@ html.touch .collapsible__body--disable {
   .calendar__weekdays__dates__date--showtime:before {
   content: '';
   position: absolute;
-  bottom: -5px;
+  bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
@@ -1702,7 +1703,7 @@ html.touch .collapsible__body--disable {
   display: block;
   opacity: 0;
   position: absolute;
-  bottom: -25px;
+  bottom: -20px;
   border-radius: 2px;
   background-color: #f6e2c5;
   color: #906b37;
@@ -2119,7 +2120,7 @@ html.touch .collapsible__body--disable {
 }
 .project-banner .project-details__box .add-calendar {
   position: absolute;
-  right: 30px;
+  right: 45px;
   top: 0;
   font-size: 16px;
   font-variant: all-small-caps;
@@ -2497,7 +2498,7 @@ html.touch .collapsible__body--disable {
 
 @media (min-width: 992px) {
   .details {
-    margin-top: 30px;
+    margin-top: 15px;
     display: flex;
   }
   .details .details__box--left {
@@ -3218,16 +3219,18 @@ html.touch .collapsible__body--disable {
   padding: 0;
 }
 .session-modal--nopadding .modal__header {
-  padding: 15px 30px 5px;
+  padding: 15px 15px 5px;
   border-bottom: 1px solid rgba(132, 146, 166, 0.3);
 }
 .session-modal--nopadding .modal__header .modal__header__title {
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   font-weight: bold;
 }
+.session-modal--nopadding .modal__header .modal__header__text {
+  margin: 0 0 5px;
+}
 .session-modal--nopadding .modal__body {
-  padding: 15px 30px;
+  padding: 0 15px 15px;
   word-break: break-word;
 }
 .session-modal--nopadding .modal__body .modal__body__separator {
@@ -3235,6 +3238,12 @@ html.touch .collapsible__body--disable {
 }
 .session-modal--nopadding .modal__body .modal__body__section {
   margin: 30px 0;
+}
+.session-modal--nopadding
+  .modal__body
+  .modal__body__section
+  .modal__body__section__text {
+  margin: 0 0 5px;
 }
 
 @media (min-width: 1200px) {
