--- a/funnel/static/sass/_project.scss
+++ b/funnel/static/sass/_project.scss
@@ -52,7 +52,7 @@
     }
     .add-calendar {
       position: absolute;
-      right: 30px;
+      right: 45px;
       top: 0;
       font-size: 16px;
       font-variant: all-small-caps;
