--- a/funnel/static/sass/_proposal.scss
+++ b/funnel/static/sass/_proposal.scss
@@ -118,7 +118,7 @@
 
 @media (min-width: 992px) {
   .details {
-    margin-top: 30px;
+    margin-top: 15px;
     display: flex;
 
     .details__box--left {
