--- a/funnel/static/sass/_schedule.scss
+++ b/funnel/static/sass/_schedule.scss
@@ -305,18 +305,21 @@
   padding: 0;
 
   .modal__header {
-    padding: 15px 30px 5px;
+    padding: 15px 15px 5px;
     border-bottom: 1px solid rgba(132, 146, 166, 0.3);
 
     .modal__header__title {
-      margin-top: 15px;
-      margin-bottom: 15px;
+      margin-bottom: 5px;
       font-weight: bold;
+    }
+
+    .modal__header__text {
+      margin: 0 0 5px;
     }
   }
 
   .modal__body {
-    padding: 15px 30px;
+    padding: 0 15px 15px;
     word-break: break-word;
 
     .modal__body__separator {
@@ -325,6 +328,10 @@
 
     .modal__body__section {
       margin: 30px 0;
+
+      .modal__body__section__text {
+        margin: 0 0 5px;
+      }
     }
   }
 }
